CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(main)
AUX_SOURCE_DIRECTORY(. SOURCES)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_EXTENSIONS ON)
ADD_EXECUTABLE(main ${SOURCES})

target_link_libraries(main -lncurses -lm)
#target_include_directories(main PUBLIC ${LIBS_INCLUDE_DIRS})
#target_compile_options(main PUBLIC ${LIBS_CFLAGS_OTHER})
